# capy

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  README.md  test.capy  tokenizer.txt  tokens.lex
.github/ISSUE_TEMPLATE/: 01_bug_report.yml  02_feature_request.yml  config.yml
.github/workflows/: rust.yml
core/: README.md  fmt.capy  libc.capy  manifest.toml  math.capy  meta.capy  mod.capy  ptr.capy  strings.capy
core/src/: fmt.capy  libc.capy  math.capy  mem.capy  meta.capy  mod.capy  ptr.capy
core/src/structs/: dyn_list.capy  list.capy  stack_list.capy  string_builder.capy
crates/ast/: Cargo.toml
crates/ast/src/: lib.rs  validation.rs
crates/capy/: Cargo.toml
crates/capy-cli/: Cargo.toml
crates/capy-cli/src/: main.rs
crates/capy/src/: binding_def.rs  env.rs  expr.rs  git.rs  lambda.rs  lib.rs  main.rs  source.rs  stmt.rs  utils.rs  val.rs
crates/capy/src/expr/: binding_usage.rs  block.rs  lambda_call.rs
crates/capy_macros/: Cargo.toml
crates/capy_macros/src/: lib.rs
crates/codegen/: .gitignore  Cargo.toml
crates/codegen/src/: builtin.rs  codegen.rs  compiler_defined.rs  convert.rs  debug.rs  extend.rs  functions.rs  gen.rs  layout.rs  lib.rs  mangle.rs  size.rs  slice_utils.rs  tests.rs  ty.rs
crates/codegen/src/compiler/: comptime.rs  functions.rs  mod.rs  program.rs  ty_info.rs
crates/codegen/src/convert/abi/: aarch64.rs  mod.rs  simplified.rs  x86_64.rs  x86_64_windows.rs
crates/debug/: Cargo.toml
crates/debug/src/: lib.rs
crates/diagnostics/: Cargo.toml
crates/diagnostics/src/: lib.rs
crates/eval/: Cargo.toml
crates/eval/src/: codegen.rs  lib.rs
crates/hir/: Cargo.toml
crates/hir/src/: body.rs  database.rs  index.rs  lib.rs  nameres.rs  subdir.rs  world_index.rs
crates/hir/src/common/: locations.rs  mod.rs  names.rs  ty.rs
crates/hir_ty/: Cargo.toml
crates/hir_ty/src/: cast.rs  ctx.rs  globals.rs  lib.rs  resolved_ty.rs  tests.rs  ty.rs
crates/hir_ty/src/tests/: arrays.rs  arrays_anon.rs  assignment.rs  assignment_quick.rs  binary.rs  cast.rs  char_and_str.rs  comptime.rs  default_values.rs  defers.rs  distincts.rs  entry_point.rs  enums.rs  error_unions.rs  extern.rs  functions.rs  generics.rs  globals.rs  if_else.rs  inference.rs  ints.rs  jumps.rs  lambda.rs  locals.rs  optionals.rs  paren.rs  pointers.rs  raw_types.rs  recursion.rs  simple.rs  slices.rs  structs.rs  structs_anon.rs  types.rs  unary.rs
crates/hir_ty/src/tests/compiler_directives/: builtin.rs  is_variant.rs  mod.rs  unwrap.rs
crates/hir_types/: Cargo.toml
crates/hir_types/src/: lib.rs
crates/interner/: Cargo.toml
crates/interner/src/: lib.rs
crates/lexer/: Cargo.toml  build.rs
crates/lexer/src/: lib.rs  token_kind.rs
crates/line_index/: Cargo.toml
crates/line_index/src/: lib.rs
crates/parser/: Cargo.toml
crates/parser/src/: error.rs  event.rs  grammar.rs  lib.rs  parser.rs  sink.rs  source.rs  tests.rs  token_set.rs
crates/parser/src/grammar/: expr.rs  path.rs  stmt.rs  ty.rs  types.rs
crates/parser/src/parser/: marker.rs  parse_error.rs
crates/parser/src/tests/repl_line/: 2_var_defs.test  array_decl.test  array_decl_no_size.test  array_decl_no_type.test  array_decl_open.test  array_decl_safe_rbrace.test  array_empty.test  array_empty_with_comma.test  array_end_at_comma.test  array_end_at_open_eof.test  array_end_at_open_random.test  array_end_at_open_semicolon.test  array_lit_empty.test  array_lit_empty_comma.test  array_lit_end_at_comma.test  array_lit_open_eof.test  array_lit_open_random.test  array_lit_open_semicolon.test  array_lit_untyped.test  array_lit_with_values.test  array_missing_dot.test  array_old_syntax.test  array_with_values.test  as.test  as_nested.test  as_ptr.test  as_ptr_nested.test  bin_literal.test  bin_literal_multiplication.test  binary_cmp.test  binary_cmp_complex.test  binary_expr_left_assoc.test  binary_expr_mixed_assoc.test  binary_expr_paren.test  binary_expr_with_unary.test  binary_expr_without_rhs.test  binary_most_complex.test  block.test  block_end_at_open_eof.test  block_end_at_open_random.test  (+189 more)
crates/parser/src/tests/source_file/: extern_and_labels.test  extern_binding.test  function_without_def_symbols.test  hir_syntax.test  import.test  import_missing_file.test  import_missing_file_and_semicolon.test  missing_return_ty_block.test  missing_return_ty_extern.test  missing_value.test  no_semicolon_extern.test  no_semicolon_extern_lambda.test  no_semicolon_lambda.test  no_semicolon_lambda_type.test  non_binding_at_root.test  return_distinct.test  semicolons_after.test  semicolons_before.test  semicolons_between.test  single_rbrace.test  unfinished_lambda_block.test  var_def_no_symbols.test  var_def_recursion.test
crates/syntax/: Cargo.toml
crates/syntax/src/: lib.rs
crates/test-utils/: Cargo.toml
crates/test-utils/src/: lib.rs
crates/token/: Cargo.toml
crates/token/src/: lib.rs
crates/topo/: Cargo.toml
crates/topo/src/: lib.rs
crates/uid_gen/: Cargo.toml
crates/uid_gen/src/: lib.rs
examples/: arrays.capy  arrays_of_arrays.capy  auto_deref.capy  comptime.capy  comptime_types.capy  convert.capy  drink.capy  entry_point.capy  enums_and_switch_statements.capy  fib.capy  file_system.capy  files.capy  first_class_functions.capy  float_to_string.capy  fun.capy  hello_world.capy  io.capy  lists.capy  lists_comptime_generic.capy  lists_runtime_generic.capy  meta_full.capy  meta_sizes.capy  new.capy  pretty.capy  ptr_assign.capy  ptrs.capy  ptrs_to_ptrs.capy  readme.capy  reflection.capy  slices.capy  string.capy  strings.capy  structs.capy  test.capy  value_ref_tests.capy  varargs.capy  vectors.capy
examples/std/: libc.capy  math.capy  ptr.capy
fuzz/: .gitignore  Cargo.toml  capy.dict
fuzz/artifacts/parse_lower/: crash-c47fa8a6e424c31115475c051b56ca362224c944
fuzz/corpus/main/: example
fuzz/fuzz_targets/: main.rs  parse_lower.rs
src/: binding_def.rs  expr.rs  lib.rs  stmt.rs  utils.rs  val.rs
src/expr/: binding_usage.rs  block.rs
