[package]
name = "fuzz"
version = "0.1.0"

[package.metadata]
cargo-fuzz = true

[dependencies]
ast = {path = "../crates/ast"}
hir = {path = "../crates/hir"}
hir_ty = {path = "../crates/hir_ty"}
codegen = {path = "../crates/codegen"}
interner = { version = "0.1.0", path = "../crates/interner" }
la-arena = "0.3.1"
lexer = {path = "../crates/lexer"}
libfuzzer-sys = "0.4.2"
parser = {path = "../crates/parser"}
rustc-hash = "1.1.0"
uid_gen = { version = "0.1.0", path = "../crates/uid_gen" }
target-lexicon = "0.12"

[workspace]

[[bin]]
name = "main"
path = "fuzz_targets/main.rs"
