[package]
name = "ast"
version = "0.1.0-alpha.1"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
syntax = {path = "../syntax"}
text-size = "1.1.0"

[dev-dependencies]
lexer = {path = "../lexer"}
parser = {path = "../parser"}
