[package]
name = "capy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ast = {path = "../ast"}
codegen = {path = "../codegen"}
hir = {path = "../hir"}
hir_types = {path = "../hir_types"}
lexer = {path = "../lexer"}
parser = {path = "../parser"}
line_index = {path = "../line_index"}
diagnostics = {path = "../diagnostics"}
interner = {path = "../interner"}
rustc-hash = "1.1"