[package]
name = "capy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ast = { path = "../ast" }
la-arena = "0.2.0"
codegen = { path = "../codegen" }
hir = { path = "../hir" }
hir_ty = { path = "../hir_ty" }
lexer = { path = "../lexer" }
parser = { path = "../parser" }
token = { path = "../token" }
line_index = { path = "../line_index" }
diagnostics = { path = "../diagnostics" }
interner = { path = "../interner" }
rustc-hash = "1.1"
supports-color = "2.0.0"
itertools = "0.11.0"

[dependencies.clap]
version = "4.1.8"
features = ["derive"]
