[package]
name = "capy"
version = "0.1.0-alpha.1"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ast = { path = "../ast" }
la-arena = "0.3"
codegen = { path = "../codegen" }
hir = { path = "../hir" }
hir_ty = { path = "../hir_ty" }
lexer = { path = "../lexer" }
parser = { path = "../parser" }
token = { path = "../token" }
line_index = { path = "../line_index" }
diagnostics = { path = "../diagnostics" }
interner = { path = "../interner" }
rustc-hash = "2.1"
supports-color = "3.0.0"
itertools = "0.14.0"
uid_gen = { path = "../uid_gen" }
path-clean = "1.0.1"
target-lexicon = "0.13"
serde_json = "1.0"
base64 = "0.22.1"
platform-dirs = "0.3.0"
enum-display = "0.1.4"

[dependencies.reqwest]
version = "0.12.5"
features = ["blocking"]

[dependencies.clap]
version = "4.1.8"
features = ["derive"]
