[package]
name = "codegen"
version = "0.1.0-alpha.1"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
interner = { path = "../interner" }
la-arena = "0.3"
hir = { path = "../hir" }
hir_ty = { path = "../hir_ty" }
rustc-hash = "2.1"
cranelift = "0.123"
cranelift-module = "0.123"
cranelift-jit = "0.123"
cranelift-native = "0.123"
cranelift-object = "0.123"
target-lexicon = "0.13"
internment = "0.8.3"
uid_gen = { path = "../uid_gen" }
num-traits = "0.2.16"
glob = "0.3.1"
tinyvec = { version = "1.6.1", features = ["tinyvec_macros"] }
which = "8.0"
itertools = "0.14"
debug = { path = "../debug" }

[dev-dependencies]
ast = { path = "../ast" }
expect-test = "1.1"
interner = { path = "../interner" }
lexer = { path = "../lexer" }
parser = { path = "../parser" }
test-utils = { path = "../test-utils" }
cfg-if = "1.0.0"
path-clean = "1.0.1"
sha256 = "1.5.0"
diagnostics = { path = "../diagnostics" }
line_index = { path = "../line_index" }
