[package]
name = "diagnostics"
version = "0.1.0-alpha.1"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ast = { path = "../ast" }
hir = { path = "../hir" }
hir_ty = { path = "../hir_ty" }
interner = { path = "../interner" }
line_index = { path = "../line_index" }
parser = { path = "../parser" }
syntax = { path = "../syntax" }
text-size = "1.1"
pathdiff = "0.2.1"

[dev-dependencies]
expect-test = "1.1"

[features]
default = []
expose_hir_ty = []
