[package]
name = "eval"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
inkwell = { git = "https://github.com/TheDan64/inkwell", branch = "master", features = ["llvm10-0"] }
interner = {path = "../interner"}
la-arena = "0.2.0"
hir = {path = "../hir"}
hir_types = {path = "../hir_types"}
rustc-hash = "1.1"

[dev-dependencies]
ast = {path = "../ast"}
expect-test = "1.1"
interner = {path = "../interner"}
lexer = {path = "../lexer"}
parser = {path = "../parser"}
test-utils = {path = "../test-utils"}
