[package]
name = "hir"
version = "0.1.0-alpha.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ast = { path = "../ast" }
la-arena = "0.3"
interner = { path = "../interner" }
rustc-hash = "2.1"
smol_str = "0.3.2"
syntax = { path = "../syntax" }
text-size = "1.1"
regex = "1.9.4"
path-clean = "1.0.1"
uid_gen = { path = "../uid_gen" }
pathdiff = "0.2.1"
bimap = "0.6.3"

[dev-dependencies]
ast = { path = "../ast" }
expect-test = "1.1"
interner = { path = "../interner" }
lexer = { path = "../lexer" }
parser = { path = "../parser" }
test-utils = { path = "../test-utils" }
uid_gen = { path = "../uid_gen" }
