[package]
name = "hir_ty"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
la-arena = "0.2.0"
hir = {path = "../hir"}
interner = {path = "../interner"}
rustc-hash = "1.1"
text-size = "1.1"
backtrace = "0.3.68"

[dev-dependencies]
ast = {path = "../ast"}
expect-test = "1.1"
interner = {path = "../interner"}
lexer = {path = "../lexer"}
parser = {path = "../parser"}
test-utils = {path = "../test-utils"}
