[package]
name = "hir_ty"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
la-arena = "0.3"
hir = { path = "../hir" }
interner = { path = "../interner" }
rustc-hash = "1.1"
text-size = "1.1"
internment = "0.8.3"
indexmap = "2.0.0"
itertools = "0.13"
topo = { path = "../topo" }

[dev-dependencies]
ast = { path = "../ast" }
expect-test = "1.1"
interner = { path = "../interner" }
lexer = { path = "../lexer" }
parser = { path = "../parser" }
test-utils = { path = "../test-utils" }
uid_gen = { path = "../uid_gen" }
text-diff = "0.4.0"
derivative = "2.2.0"
codegen = { path = "../codegen" }
target-lexicon = "0.12"
