[package]
name = "lexer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
logos = "0.12.0"
token = { path = "../token" }
text-size = "1.0.0"
syntax = { path = "../syntax" }
capy_macros = { path = "../capy_macros" }
