[package]
name = "lexer"
version = "0.1.0-alpha.1"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
logos = "0.14.4"
token = { path = "../token" }
text-size = "1.0.0"
syntax = { path = "../syntax" }
capy_macros = { path = "../capy_macros" }
