[package]
name = "parser"
version = "0.1.0-alpha.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
capy_macros = {path = "../capy_macros"}
chrono = "0.4.23"
drop_bomb = "0.1.5"
static_assertions = "1.1"
syntax = {path = "../syntax"}
text-size = "1.0.0"
timer = "0.2.0"
token = {path = "../token"}

[dev-dependencies]
expect-test = "1.0.1"
lexer = {path="../lexer"}
